@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-24T16:07:05Z",
-  "count_outdated" : 1794,
-  "uniques_outdated" : 548,
-  "count" : 1828,
-  "uniques" : 567,
+  "timestamp" : "2022-09-25T00:36:23Z",
+  "count_outdated" : 1797,
+  "uniques_outdated" : 550,
+  "count" : 1831,
+  "uniques" : 568,
   "clones" : [
-    {
-      "timestamp": "2022-09-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-09-11T00:00:00Z",
       "count": 3,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
