@@ -1,12 +1,7 @@
 {
   "count": 34,
-  "uniques": 6,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-09-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-11T00:00:00Z",
       "count": 3,
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-09-24T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
