@@ -1,3 +1,11 @@
+2022-09-25T00:36:23Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3120346144
+* notice: last 14d: unq all: 5 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 548 1794 / 567 1828
+* notice: next accum: outdated-unq outdated-all / unq all: 550 1797 / 568 1831
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-09-10] / [2022-09-24]
+
 2022-09-24T16:07:05Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3118944860
 * notice: last 14d: unq all: 6 34
